test/classes/nilability/coerce-away-nilable.good
coerce-away-nilable.chpl:6: error: Cannot assign to borrowed MyClass from borrowed MyClass?
